--- a/.github/workflows/DevSecOps.yml
+++ b/.github/workflows/DevSecOps.yml
@@ -2,10 +2,10 @@ name: DevSecOps
 'on':
   push:
     branches:
-      - development
+      - GCP-DEV
   pull_request:
     branches:
-      - development
+      - GCP-DEV
   workflow_dispatch: null
 
 env:
