--- a/.github/workflows/TestFlow.yml
+++ b/.github/workflows/TestFlow.yml
@@ -20,11 +20,11 @@ env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
   # KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
   # KUBE_NAMESPACE: production
-  ECR_REPOSITORY: padso
+
 
 jobs:
  
-  setup-build-publish-deploy:
+  Deploy to AWS ECR:
 
     runs-on: ubuntu-latest
 
@@ -50,6 +50,26 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
+      
+      # Push image to ECR
+      - name: Build, tag, and push image to Amazon ECR
+        id: build-image
+        env: ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+             ECR_REPOSITORY: padso
+             IMAGE_TAG: ${{ github.sha }}
+        run: |
+          # Build a docker container and
+          # push it to ECR so that it can
+          # be deployed to ECS.
+          docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+          docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+          echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
+
+
+
+
+
         
 
 
