--- a/.github/workflows/TestFlow.yml
+++ b/.github/workflows/TestFlow.yml
@@ -54,9 +54,10 @@ jobs:
       # Push image to ECR
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
-        env: ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-             ECR_REPOSITORY: padso
-             IMAGE_TAG: ${{ github.sha }}
+        env: 
+            ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+            ECR_REPOSITORY: padso
+            IMAGE_TAG: ${{ github.sha }}
         run: |
           # Build a docker container and
           # push it to ECR so that it can
