AWS test image push to ECR

--- a/.github/workflows/TestFlow.yml
+++ b/.github/workflows/TestFlow.yml
@@ -51,7 +51,7 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       
-      # Push image to ECR
+      # Push image to AWS ECR
       - name: Build, tag, and push image to Amazon ECR
         id: build-image
         env: 
