--- a/.github/workflows/TestFlow.yml
+++ b/.github/workflows/TestFlow.yml
@@ -43,6 +43,18 @@ jobs:
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
       
+      # # Push image to AWS ECR
+      # - name: Build, tag, and push image to Amazon ECR
+      #   id: build-image
+      #   env: 
+      #       ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
+      #       ECR_REPOSITORY: padso
+      #       IMAGE_TAG: ${{ github.sha }}
+      #   run: |
+      #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
+      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
+      #     echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+
 
 
 
