--- a/.github/workflows/TestFlow.yml
+++ b/.github/workflows/TestFlow.yml
@@ -20,13 +20,21 @@ env:
   AWS_REGION: ${{ secrets.AWS_REGION }}
   # KUBE_CONFIG_DATA: ${{ secrets.KUBE_CONFIG_DATA }}
   # KUBE_NAMESPACE: production
-
+  ECR_REPOSITORY: padso
 
 jobs:
  
-  Deploy to AWS ECR:
+  setup-build-publish-deploy:
+
     runs-on: ubuntu-latest
+
+   
     steps:
+      # This step cancel any current run for this job
+      - name: Cancel Previous Runs               
+        uses: styfle/cancel-workflow-action@0.4.1
+        with:                                    
+          access_token: ${{ github.token }}
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
       - name: Checkout
         uses: actions/checkout@v2
@@ -42,22 +50,11 @@ jobs:
       - name: Login to Amazon ECR
         id: login-ecr
         uses: aws-actions/amazon-ecr-login@v1
-      
-      # # Push image to AWS ECR
-      # - name: Build, tag, and push image to Amazon ECR
-      #   id: build-image
-      #   env: 
-      #       ECR_REGISTRY: ${{ steps.login-ecr.outputs.registry }}
-      #       ECR_REPOSITORY: padso
-      #       IMAGE_TAG: ${{ github.sha }}
-      #   run: |
-      #     docker build -t $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG .
-      #     docker push $ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG
-      #     echo "::set-output name=image::$ECR_REGISTRY/$ECR_REPOSITORY:$IMAGE_TAG"
+        
 
 
-
-
-
-
-  
+      # Runs a set of commands using the runners shell
+      - name: Run a multi-line script
+        run: |
+          echo Add other actions to build,
+          echo test, and deploy your project.
