--- a/.github/workflows/DAST.yml
+++ b/.github/workflows/DAST.yml
@@ -1,17 +1,17 @@
 name: DAST
 on:
-  # push:
-  #   branches:
-  #     - GCP-DEV
-  # pull_request:
-  #   branches:
-  #     - GCP-DEV
-  # workflow_dispatch: null
-  workflow_run:
-    workflows: ["Build and Deploy to GKE"]
-    types: 
-      - completed
- 
+  push:
+    branches:
+      - GCP-DEV
+  pull_request:
+    branches:
+      - GCP-DEV
+  workflow_dispatch: null
+  # workflow_run:
+  #   workflows: ["Build and Deploy to GKE"]
+  #   types: 
+  #     - completed
+  # workflow_dispatch: null   
   
 
 
