--- a/.github/workflows/nikto.yml
+++ b/.github/workflows/nikto.yml
@@ -27,4 +27,9 @@ jobs:
       - name: Install and run Nikto scanner
         run: |
           sudo apt-get install nikto -y
-          nikto -h
+          nikto -h ${{ secrets.EXT_IP }}
+      - name: artifacts
+       uses: actions/upload-artifact@v2
+       with:
+          name: DAST-artifact
+          path: ${{ github.workspace }}
