--- a/.github/workflows/wapiti.yml
+++ b/.github/workflows/wapiti.yml
@@ -28,8 +28,8 @@ jobs:
         run: |
           pip install wapiti3
           wapiti -u ${{ secrets.EXT_IP }}
-      # - name: artifacts
-      #   uses: actions/upload-artifact@v2
-      #   with:
-      #       name: DAST-artifact
-      #       path: ${{ github.workspace }}
+      - name: artifacts
+        uses: actions/upload-artifact@v2
+        with:
+            name: DAST-artifact
+            path: ${{ github.workspace }}
