--- a/.github/workflows/wapiti.yml
+++ b/.github/workflows/wapiti.yml
@@ -32,4 +32,4 @@ jobs:
         uses: actions/upload-artifact@v2
         with:
             name: DAST-artifact
-            path: ${{ github.workspace }}
+            path: ${{ github.workspace }}/.wapiti/generated_report
